--- a/пики.vcxproj.filters
+++ b/пики.vcxproj.filters
@@ -18,9 +18,18 @@
     <ClCompile Include="MyForm.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="ClassEntryVal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ClassEntryVal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
