--- a/пики.vcxproj
+++ b/пики.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="CNeuroAnswer.h" />
     <ClInclude Include="CVal.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="Metod1.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
