--- a/пики.vcxproj.filters
+++ b/пики.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClInclude Include="Metod.h">
       <Filter>Class\MatMetods</Filter>
     </ClInclude>
+    <ClInclude Include="Metod2.h">
+      <Filter>Class\MatMetods</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
