--- a/пики.vcxproj
+++ b/пики.vcxproj
@@ -137,14 +137,17 @@
     <ClInclude Include="CMasVal.h" />
     <ClInclude Include="CNeuroAnswer.h" />
     <ClInclude Include="CNeuroLearn.h" />
+    <ClInclude Include="CONST.h" />
     <ClInclude Include="CVal.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="Metod.h" />
     <ClInclude Include="Metod1.h" />
     <ClInclude Include="Metod2.h" />
+    <ClInclude Include="Metod2_neuro.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="NeuroCreate.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MyForm.resx">
